internal connections turned off

--- a/generation/experiments/internal_connections_analysis.ipynb
+++ b/generation/experiments/internal_connections_analysis.ipynb
@@ -81,7 +81,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 4,
+      "execution_count": 0,
       "outputs": [
         {
           "output_type": "stream",
@@ -673,46 +673,6 @@
     {
       "cell_type": "markdown",
       "metadata": {
-        "id": "6NDDqVvqABDm",
-        "colab_type": "text"
-      },
-      "source": [
-        "# Discard black images from batch (put values to 'nan')\n",
-        "\n",
-        "This normalization is just to test the metrics and see if there is a big difference in normalizing the prediction and the gt.\n",
-        "This method is used to normalize (and so put to 'nan') only the black images, while the other images of the batch are kept with the original values. This allows me to discard the black images in the computation of the metrics."
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "id": "YVFWdUV2-3-E",
-        "colab_type": "code",
-        "colab": {}
-      },
-      "source": [
-        "def black_images_to_nan(image): \n",
-        "    image_normalized = tf.TensorArray(tf.float32, size=BATCH_SIZE)\n",
-        "    for i in range(BATCH_SIZE):\n",
-        "        # rescaling each image in the batch\n",
-        "        max_value = tf.math.reduce_max(image[i])\n",
-        "        min_value = tf.math.reduce_min(image[i])\n",
-        "\n",
-        "        # if the max = min most likely it's a black image (or an image without any important information)\n",
-        "        if tf.math.equal(max_value, min_value):        \n",
-        "            x = mean_rescale(image[i], min_value, max_value)\n",
-        "            image_normalized = image_normalized.write(i, x)\n",
-        "        else:\n",
-        "            image_normalized = image_normalized.write(i, image[i])\n",
-        "    image_normalized = image_normalized.stack()\n",
-        "    return image_normalized"
-      ],
-      "execution_count": 0,
-      "outputs": []
-    },
-    {
-      "cell_type": "markdown",
-      "metadata": {
         "id": "UCdL3Y_SVkCD",
         "colab_type": "text"
       },
@@ -728,19 +688,13 @@
         "colab": {}
       },
       "source": [
-        "def generate_predictions(inp, single_output):\n",
+        "def generate_predictions(inp):\n",
         "    predictions = []\n",
         "\n",
-        "    if single_output:\n",
-        "        for generator in generators:\n",
-        "            prediction = generator(inp, training=False)\n",
-        "            predictions.append(prediction)\n",
-        "    else:\n",
-        "        for generator in generators:\n",
-        "            prediction = generator(inp, training=False)\n",
-        "            prediction = prediction[:, :, :, 3]\n",
-        "            prediction = tf.expand_dims(prediction, axis=3) \n",
-        "            predictions.append(prediction)\n",
+        "    for generator in generators:\n",
+        "        prediction = generator(inp, training=False)\n",
+        "        predictions.append(prediction)\n",
+        "   \n",
         "    return predictions"
       ],
       "execution_count": 0,
@@ -763,22 +717,16 @@
         "            # preparing the input to the generator\n",
         "            ground_truth = tflair\n",
         "            shut_down_from_left = True\n",
-        "            single_output = True\n",
-        "\n",
         "            if model == 0:      # pix2pix\n",
         "                inp = t2\n",
         "            elif model == 1:    # MI-pix2pix\n",
         "                inp = tf.concat([t1, t2, t1c], 3)\n",
         "            elif model == 2:    # MI-GAN (modified version)\n",
         "                inp = tf.concat([t1, t1c, t2], 3)\n",
-        "            elif model == 3:    # MI-GAN (original version)\n",
-        "                gt_imputed = tf.zeros((32, 256, 256, 1), dtype=tf.dtypes.float32)\n",
-        "                inp = tf.concat([t1, t2, t1c, gt_imputed], 3)\n",
-        "                single_output = False\n",
         "\n",
         "            (prediction1, prediction2, prediction3, prediction4, prediction5, \n",
         "            prediction6, prediction7, prediction8, prediction9, prediction10, \n",
-        "            prediction11, prediction12, prediction13, prediction14) = generate_predictions(inp, single_output)\n",
+        "            prediction11, prediction12, prediction13, prediction14) = generate_predictions(inp)\n",
         "\n",
         "            # crop the images\n",
         "            t1_cr, t2_cr, t1c_cr, ground_truth_cr = resize_with_crop(t1, t2, t1c, tflair)\n",
@@ -2483,10 +2431,6 @@
         "            inp = tf.concat([t1, t2, t1c], 3)\n",
         "        elif model == 2:    # MI-GAN (modified version)\n",
         "            inp = tf.concat([t1, t1c, t2], 3)\n",
-        "        elif model == 3:    # MI-GAN (original version)\n",
-        "            gt_imputed = tf.zeros((32, 256, 256, 1), dtype=tf.dtypes.float32)\n",
-        "            inp = tf.concat([t1, t2, t1c, gt_imputed], 3)\n",
-        "            single_output = False\n",
         "\n",
         "        (prediction1, prediction2, prediction3, prediction4, prediction5, \n",
         "        prediction6, prediction7, prediction8, prediction9, prediction10, \n",
